Added amarnath yatra

--- a/index.html
+++ b/index.html
@@ -232,6 +232,31 @@
             Book Now
           </button>
         </div>
+         <div class="items">
+          <div class="image"><img src="assests/amarnath.jpeg" alt="" /></div>
+          <div class="title">
+            <h3>Amarnath Holy Yatra</h3>
+            <p>
+                Experience the spiritual journey to the holy Amarnath Cave with our all-inclusive Amarnath Yatra package.
+            </p>
+          </div>
+
+          <div class="details">
+            <h3><i class="fa-solid fa-calendar-days"></i> 5 Days 4 Nights</h3>
+            <p><i class="fa-solid fa-house"></i> Srinagar, Pahalgham(1N),Panchtarni(2N),Sonamrg(1N) </p>
+            <p>
+              <i class="fa-solid fa-location-dot"></i>  Srinagar, Pahalgham, Sonamarg
+            </p>
+
+            <div class="details-img">
+              <img src="assests/detailsimg.webp" alt="" />
+            </div>
+          </div>
+
+          <button class="booknow">
+            Book Now
+          </button>
+        </div>
       </div>
 
       <div id="myModal" class="modal">
