--- a/index.html
+++ b/index.html
@@ -182,6 +182,32 @@
           </button>
         </div>
         <div class="items">
+          <div class="image"><img src="assests/amarnath.jpeg" alt="" /></div>
+          <div class="title">
+            <h3>Amarnath Holy Yatra</h3>
+            <p>
+                Experience the spiritual journey to the holy Amarnath Cave with our all-inclusive Amarnath Yatra package.
+            </p>
+          </div>
+
+          <div class="details">
+            <h3><i class="fa-solid fa-calendar-days"></i> 6 Days 5 Nights</h3>
+            <p><i class="fa-solid fa-house"></i> Srinagar(1N), Pahalgham(1N),
+            Sonamrg(3N) </p>
+            <p>
+              <i class="fa-solid fa-location-dot"></i>  Dal Lake, Pahalgham, Sonamarg
+            </p>
+
+            <div class="details-img">
+              <img src="assests/detailsimg.webp" alt="" />
+            </div>
+          </div>
+
+          <button class="booknow">
+            Book Now
+          </button>
+        </div>
+        <div class="items">
           <div class="image"><img src="assests/package5-.jpg" alt="" /></div>
           <div class="title">
             <h3>Kashmir Honeymoon Joy</h3>
@@ -221,31 +247,6 @@
             <p>
               <i class="fa-solid fa-location-dot"></i> Srinagar, Pahalgham, Gulmarg, Sonmarg, Doodhpathri
 
-            </p>
-
-            <div class="details-img">
-              <img src="assests/detailsimg.webp" alt="" />
-            </div>
-          </div>
-
-          <button class="booknow">
-            Book Now
-          </button>
-        </div>
-         <div class="items">
-          <div class="image"><img src="assests/amarnath.jpeg" alt="" /></div>
-          <div class="title">
-            <h3>Amarnath Holy Yatra</h3>
-            <p>
-                Experience the spiritual journey to the holy Amarnath Cave with our all-inclusive Amarnath Yatra package.
-            </p>
-          </div>
-
-          <div class="details">
-            <h3><i class="fa-solid fa-calendar-days"></i> 5 Days 4 Nights</h3>
-            <p><i class="fa-solid fa-house"></i> Srinagar, Pahalgham(1N),Panchtarni(2N),Sonamrg(1N) </p>
-            <p>
-              <i class="fa-solid fa-location-dot"></i>  Srinagar, Pahalgham, Sonamarg
             </p>
 
             <div class="details-img">
